--- a/0-/GSoC:2008/Collections 2.0.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0.mediawiki
@@ -10,5 +10,6 @@ Collections are xmms2 medialib querying interface. The current implementation ha
 
 *[[Summer of Code 2008/Collections 2.0/Source-preference|Something on source-preference]]
 *[[Summer of Code 2008/Collections 2.0/Querying concept|A concept for querying metadata]]
+*[[Summer of Code 2008/Collections 2.0/Query API proposal|Query API proposal]]
 
 }}
