--- a/0-/Contribs.mediawiki
+++ b/0-/Contribs.mediawiki
@@ -40,7 +40,7 @@ Good for using in hotkeys(specially if you have a multimedia keyboard ;) )
 
 {{Contrib| title=Fvwm menu | author=ashtophet| description=Simple fvwm2 menu to control xmms2. Based on univac's fvwm config. | moreinfo=| files=* [http://www.ashtophet.org/screenshots.html config]}}
 
-{{Contrib| title=xmms2 (and conky) extra tags patch | author=ashtophet| description=I've found myself switching back to QuodLibet to get proper info from my tagged classical music files. Last weeks I've been using a small patch which adds five custom tags (performer, composer, conductor, opus and part). Until it's elegantly solved by xmms2 developers, and if someone find it [http://article.gmane.org/gmane.comp.multimedia.xmms2.devel/1069 useful] I've decided to post it here shamelessly. | moreinfo= It also includes a conky patch to be able to use those tags on your conkyrc (i.e. $xmms2_opus, $xmms2_performer, etc.). Tested against git/SVN revs (late June, 2008 #date will be updated). It patches flac.c, vorbis.c and xmms_medialib.h. Under the "It Works For Me, Use It At Your Own Risk(TM)" motto. | files=* [http://www.ashtophet.org/patches.html patches]}}
+{{Contrib| title=xmms2 (and conky) extra tags patch | author=ashtophet| description=I've found myself switching back to QuodLibet to get proper info from my tagged classical music files. Last weeks I've been using a small patch which adds five custom tags (performer, composer, conductor, opus and part). Until it's elegantly solved by xmms2 developers, and hoping that someone may find it [http://article.gmane.org/gmane.comp.multimedia.xmms2.devel/1069 useful], I've decided to post it here shamelessly. | moreinfo= It also includes a conky patch to be able to use those tags on your conkyrc (i.e. $xmms2_opus, $xmms2_performer, etc.). Tested against git/SVN revs (late June, 2008 #date will be updated). It patches flac.c, vorbis.c and xmms_medialib.h. Under the "It Works For Me, Use It At Your Own Risk(TM)" motto. | files=* [http://www.ashtophet.org/patches.html patches]}}
 
 {{Contrib| title=WeeChat script | author=Konstantin Merenkov | description=Print currently playing track (format is configurable) in xmms2 to a channel or private buffer in WeeChat IRC client. | moreinfo=| files=* [http://weechat.flashtux.org/scripts/xmms2.pl xmms2.pl]}}
 
