Levitation import of page 2465 rev 8342.

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -45,7 +45,8 @@
 
 * Add a specials namespace
 
-
+* Add proper database updating
 * Add some optimalisations to collquery.c
+
 * Do the FIXMEs
 * Do the TODOs
