--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -13,7 +13,7 @@
 * Add prefix-matching
 
 
-* Implement in "index" in the idlist virtual table
+* Implement an "index" in the idlist virtual table
 
 
 * Readd DAG-checking
