Levitation import of page 2466 rev 8348.

--- a/0-/GSoC:2008/nycli/Roadmap.mediawiki
+++ b/0-/GSoC:2008/nycli/Roadmap.mediawiki
@@ -8,3 +8,5 @@
 * Discuss with mentor what todo next
 ** Extend parser? Virtual paths?
 ** Aliases?
+* Auto-completion
+** Commands, playlist, spell-correction, etc
