Levitation import of page 2465 rev 8351 (minor).

--- a/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Todo list.mediawiki
@@ -22,7 +22,7 @@ Notation: In '''bold''' high-priority stuff, in ''italic'' optional/low-priority
 * '''Readd DAG-checking'''
 
 
-* '''Implement an id-wise operator'''
+* <del>'''Implement an id-wise operator'''</del>
 * Implement the token-operator
 * ''Implement a similar-operator (extra)''
 
