--- a/10-Template/Summer of Code 2008/Collections 2.0/Operator.mediawiki
+++ b/10-Template/Summer of Code 2008/Collections 2.0/Operator.mediawiki
@@ -3,15 +3,20 @@ __NOEDITSECTION__
 
 {|
 |-
-! style="text-align:left; padding-right: 20px;" | Type identifier
-| <code>{{{type}}}</code>
+! style="text-align:left; padding-right: 20px;" | Type&nbsp;identifier
+| <code>
+{{{type}}}
+</code>
 |-
 ! style="text-align:left; padding-right: 20px;" | Result
-| {{{result}}}
+|
+{{{result}}}
 |-
 ! style="text-align:left; padding-right: 20px;" | Attributes
-| {{{attributes}}}
+|
+{{{attributes}}}
 |-
 ! style="text-align:left; padding-right: 20px;" | Operands
-| {{{operands}}}
+|
+{{{operands}}}
 |}
